# DDCC-containers-code

./: README.md
matrix/: CMakeLists.txt
matrix/app/include/matrix-container/handlers/: mainHandler.hpp  multiplicationHandler.hpp
matrix/app/src/: app.cpp  utils.cpp
matrix/app/src/handlers/: mainHandler.cpp  multiplicationHandler.cpp
matrix/app/src/kernel/: Server.cpp
vector/: CMakeLists.txt
vector/app/include/vector-container/: utils.hpp
vector/app/include/vector-container/handlers/: additionHandler.hpp  mainHandler.hpp
vector/app/include/vector-container/kernel/: Server.hpp
vector/app/src/: app.cpp  utils.cpp
vector/app/src/handlers/: additionHandler.cpp  mainHandler.cpp
vector/app/src/kernel/: Server.cpp
